knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Key_Stakeholder__c/pqcrush__Key_Stakeholder__c.object-meta.xml
<CustomObject>
    <label>Key Stakeholder</label>
    <nameField>
        <displayFormat>KS-{0000}</displayFormat>
        <label>Key Stakeholder Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Key Stakeholders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>