knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Key_Stakeholder__c/fields/pqcrush__Contact__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Key Stakeholders</relationshipLabel>
    <relationshipName>Key_Stakeholders</relationshipName>
    <type>Lookup</type>
</CustomField>