knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Key_Stakeholder__c/fields/pqcrush__ContactFirstName__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__ContactFirstName__c</fullName>
    <formula>pqcrush__Contact__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact First Name</label>
    <type>Text</type>
</CustomField>