knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Key_Stakeholder__c/fields/pqcrush__ContactLastName__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__ContactLastName__c</fullName>
    <formula>pqcrush__Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Last Name</label>
    <type>Text</type>
</CustomField>