knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Key_Stakeholder__c/fields/pqcrush__Email__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Email__c</fullName>
    <formula>pqcrush__Contact__r.Email</formula>
    <label>Email</label>
    <type>Text</type>
</CustomField>