knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Key_Stakeholder__c/fields/pqcrush__Phone__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Phone__c</fullName>
    <formula>pqcrush__Contact__r.Phone</formula>
    <label>Phone</label>
    <type>Text</type>
</CustomField>