knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Key_Stakeholder__c/fields/pqcrush__Reports_To__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Reports_To__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; pqcrush__Contact__r.ReportsToId, pqcrush__Contact__r.ReportsTo.FirstName + &quot; &quot; + pqcrush__Contact__r.ReportsTo.LastName)</formula>
    <label>Reports To</label>
    <type>Text</type>
</CustomField>