knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Key_Stakeholder__c/fields/pqcrush__ReportsToId__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__ReportsToId__c</fullName>
    <formula>pqcrush__Contact__r.ReportsToId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reports To Id</label>
    <type>Text</type>
</CustomField>